--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,7 @@ body {
 .container {
     width: 1140px;
     margin: 0 auto;
-    padding: 0 15px;
-   
+    padding: 0 15px;   
 }
 
 .section {
@@ -215,4 +214,49 @@ body {
 .footer {
     display: flex;
     justify-content: center;
+}
+
+.portfolio {
+    background-color: var(--accent);
+}
+
+.portfolio-title {
+    margin-bottom: 2em;
+    color: var(--pure-white);
+}
+
+.portfolio ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+}
+
+.portfolio li {
+    border-radius: 5px;
+    background-color: var(--pure-white);
+    text-align: center;
+    padding-bottom: 15px;overflow: hidden;
+}
+
+.portfolio img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
+.portfolio ul a{
+    display: inline-block;
+    padding: 10px 30px;
+    color: var(--pure-white);
+    text-decoration: none;
+    background-color: var(--accent);
+    border-radius: 4px;
+    transform: all 0.3s;
+}
+
+.portfolio ul a:hover {
+    background-color: var(--accent-light);
 }
