--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-   /*  padding: 15px 0; */
+    padding: 15px 0;
 }
 
 .header-logo {
@@ -59,7 +59,6 @@ body {
     font-weight: 800;
     letter-spacing: 1px;
 }
-
 
 .menu {
     width: 78%;
@@ -80,15 +79,9 @@ body {
     transition: background-color 0.4s;
 }
 
-/* .menu-link:hover {
-    background-color: #db9fbf;
-} */
-
 .menu-link:hover {
     background-color: var(--accent-light);
 } 
-
-
 
 .intro {
     padding: 4em 0;
@@ -259,4 +252,147 @@ body {
 
 .portfolio ul a:hover {
     background-color: var(--accent-light);
+}
+
+.menu-toggle {
+    background: none;
+    border: none;
+    margin-left: 20px;
+    display: none;
+}
+
+.header .show-menu {
+    display: block;
+}
+
+@media screen and (max-width: 1200px) {
+    .container {
+        width: 960px;
+    }
+    .code-example pre {
+        width: 65%;
+    }
+    .intro-left {
+        width: 45%;
+    }
+    .intro-right {
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    .container {
+        width: 720px;
+    }
+    .menu {
+        display: none;
+    }
+    .menu-toggle {
+        display: block;
+    }
+    .intro-left {
+        width: 55%;
+    }
+    .intro-right {
+        width: 70%;
+    }
+    .code-example pre {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .container {
+        width: 100%;
+        padding: 0 15px;
+    }
+    .portfolio ul {
+    grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .intro-left {
+        width: 55%;
+    }
+    .intro-right {
+        width: 70%;
+    }
+    .code-example pre {
+        width: 95%;
+    }
+}
+
+@media screen and (max-width: 670px) {
+    .code-example pre {
+        width: 100%;
+    }
+    .intro-inner {
+        flex-wrap: wrap;
+    }
+    
+}
+
+@media screen and (max-width: 610px) {
+    .code-example pre {
+        font-size: unset;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .intro-left{
+        width: 70%;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .code-example pre {
+        font-size: 0.9em;
+    }
+    .intro-left {
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 470px) {
+    .code-example pre {
+        font-size: 0.7em;
+    }
+    .portfolio ul {
+        display: block;
+    }
+}
+
+@media screen and (max-width: 470px) {
+    .intro-left {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 398px) {
+    .intro-left {
+        width: 100%;
+    }
+    .code-example pre {
+        font-size: 0.6em;
+    }
+}
+
+@media screen and (max-width: 377px) {
+    .intro-img {
+        width: 270px;
+        height: 192px;
+    }
+    .intro-left {
+        width: 80%;
+    }
+    .code-example pre {
+        font-size: 0.5em;
+    }
+}
+
+@media screen and (max-width: 377px) {
+    .intro-left {
+        width: 90%;
+    }
 }
