--- a/css/style.css
+++ b/css/style.css
@@ -261,13 +261,19 @@ body {
     display: none;
 }
 
-.header .show-menu {
+/* .header .show-menu {
     display: block;
-}
+} */
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1201px) {
     .container {
         width: 960px;
+    }
+    .menu {
+        display: none;
+    }
+    .menu-toggle {
+        display: block;
     }
     .code-example pre {
         width: 65%;
@@ -283,12 +289,6 @@ body {
 @media screen and (max-width: 991px) {
     .container {
         width: 720px;
-    }
-    .menu {
-        display: none;
-    }
-    .menu-toggle {
-        display: block;
     }
     .intro-left {
         width: 55%;
